Выполнено задание 2 из дз по теме “Основы Java. Введение” №20